--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 Custom medium contrast light and dark themes for Emacs (intended for GUI only).
-Written using [[https://github.com/jasonm23/autothemer][autothemer]]. Inspired by (and to some extent shamelessly stolen from)
+Written using [[https://github.com/jasonm23/autothemer][autothemer]]. Heavily inspired by (and to some extent shamelessly stolen from)
 [[https://github.com/rougier][Nicolas Rougier's]] work on [[https://github.com/rougier/elegant-emacs][elegant-emacs]] and [[https://github.com/rougier/nano-emacs][nano-emacs]], with some ideas and colors
 borrowed from [[https://github.com/bbatsov/solarized-emacs][solarized]] and [[https://github.com/arcticicestudio/nord-emacs][nord]]. Also includes a useful footer line visual alert
 "bell" inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]]. Faces are basic but fairly comprehensive. 
