--- a/README.org
+++ b/README.org
@@ -1,10 +1,16 @@
 Custom medium contrast light and dark themes for Emacs (intended for GUI only, though
 basic support in terminal has been added). This started as a fork of [[https://github.com/rougier][Nicolas
 Rougier's]] work on [[https://github.com/rougier/elegant-emacs][elegant-emacs]] and [[https://github.com/rougier/nano-emacs][nano-emacs]], but has evolved with some ideas and
-colors borrowed from, [[https://material.io/design/color/the-color-system.html#color-theme-creation][material colors]], [[https://github.com/bbatsov/solarized-emacs][solarized]] and [[https://github.com/arcticicestudio/nord-emacs][nord]]. The mode line may be set
-as a header line (as in nano-emacs) or as the normal footer line. Also included is a
-useful footer line visual alert "bell" inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]]. Faces are basic but
-fairly comprehensive, including evil cursor colors.
+colors borrowed from, [[https://material.io/design/color/the-color-system.html#color-theme-creation][material colors]], [[https://github.com/bbatsov/solarized-emacs][solarized]] and [[https://github.com/arcticicestudio/nord-emacs][nord]].
+
+One of the aims of the theme is to bring much of what is good about the nano-emacs
+distro into standard theme formatting, so that it can be set just like any other theme.
+
+The mode line is custom, and may be set as a header line (as in nano-emacs) or as the
+normal footer line. Also included is a useful footer line visual alert "bell"
+inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]].
+
+Faces are basic but fairly comprehensive, including evil cursor colors.
 
 *NOTE*: It is early days for this theme, so there may be fairly significant changes
 made in various commits. Pull requests are welcome!
