Add italic options & update README

--- a/README.org
+++ b/README.org
@@ -10,18 +10,18 @@ emacs), in the sense that it has a broader color palette and set fewer configura
 conditions on fonts and ui elements, but it otherwise shares many of its colors and
 themeing ideas.
 
-There is an optional custom mode line, and may be set as a header line (as in
-nano-emacs) or as the normal footer line, or the theme can make marely cosmetic
-changes (see the options for the =(set-bespoke-mode-line)= variable. There is a toggle
-function for toggling between light and dark theme variants: =(bespoke/toggle-theme)=.
-Also included is a useful footer line visual alert "bell" inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]]. To
-use set =(setq set-bespoke-visual-bell t)= in your setup of the theme.
+*OPTIONS*: There is an optional custom mode line, and may be set as a header line (as
+in nano-emacs) or as the normal footer line, or the theme can make marely cosmetic
+changes (see the options for the =(set-bespoke-mode-line)= variable. You can set
+italics for keywords or for comments (or both). There is a toggle function for
+toggling between light and dark theme variants: =(bespoke/toggle-theme)=. Also included
+is a useful footer line visual alert "bell" inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]]. To use set =(setq
+set-bespoke-visual-bell t)= in your setup of the theme.
 
 Faces are basic but fairly comprehensive, including (optional) evil cursor colors.
 
 *NOTE*: It is early days for this theme, so there may be fairly significant changes
 made in various commits. Suggestions and pull requests are welcome!
-
 
 *** Settings
 Here's one possible way of setting up the theme. Note that since this theme is
@@ -40,6 +40,9 @@ packages, but you can of course install it from this repo however you wish.
   (setq set-bespoke-visual-bell t)
   ;; Set initial theme variant
   (setq bespoke-set-theme 'dark)
+    ;; Set use of italics
+  (setq set-bespoke-italic-comments t
+        set-bespoke-italic-keywords t)
   ;; Load theme
   (load-theme 'bespoke t))
 #+end_src
