--- a/README.org
+++ b/README.org
@@ -14,10 +14,11 @@ themeing ideas.
 in nano-emacs) or as the normal footer line, or the theme can make marely cosmetic
 changes (see the options for the =(set-bespoke-mode-line)= variable. You can set
 italics for keywords or for comments (or both). You can set variable-pitch for
-headlines using =(set-bespoke-variable-pitch)=. There is a toggle function for
-toggling between light and dark theme variants: =(bespoke/toggle-theme)=. Also included
-is a useful footer line visual alert "bell" inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]]. To use include =(setq
-set-bespoke-visual-bell t)= in your setup of the theme.
+headlines using =(set-bespoke-variable-pitch)=. There is a toggle function for toggling
+between light and dark theme variants: =(bespoke/toggle-theme)=. Also included is a
+useful footer line visual alert "bell" inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]]. To use include =(setq
+set-bespoke-visual-bell t)= in your setup of the theme. All options are available via
+=customize-group=, and can also be found in the =bespoke-themes.el= file.
 
 Faces are basic but fairly comprehensive, including (optional) evil cursor colors.
 
