Add note to README

--- a/README.org
+++ b/README.org
@@ -81,13 +81,13 @@ For the padding in frame used in the screenshots try the following settings:
   ;; Make a clean & minimalist frame
   (setq-default default-frame-alist
                 (append (list
-	                        '(font . "SF Mono:style=medium:size=15")
-                         '(internal-border-width . 20)
-                         '(left-fringe    . 0)
-                         '(right-fringe   . 0)
-                         '(tool-bar-lines . 0)
-                         '(menu-bar-lines . 0)
-                         '(vertical-scroll-bars . nil))))
+                '(font . "SF Mono:style=medium:size=15") ;; NOTE: substitute whatever font you prefer here
+                '(internal-border-width . 20)
+                '(left-fringe    . 0)
+                '(right-fringe   . 0)
+                '(tool-bar-lines . 0)
+                '(menu-bar-lines . 0)
+                '(vertical-scroll-bars . nil))))
   (setq-default window-resize-pixelwise t)
   (setq-default frame-resize-pixelwise t)
 #+end_src
