--- a/README.org
+++ b/README.org
@@ -17,15 +17,16 @@ cursor colors. I'm trying to add faces on a regular basis.
 *** Options
 
 - There is an optional custom mode line, which may be set as a header line (as in
-  nano-emacs), or as the normal footer line, or the theme can make marely cosmetic
-  changes (see the options for the =(bespoke-set-mode-line)= variable.
+  nano-emacs), or as the normal footer line, or the theme can make merely cosmetic
+  changes. See the options for the =(bespoke-set-mode-line)= variable.
 - You can set italics for keywords or for comments (or both).
 - You can set variable-pitch for headlines using =(bespoke-set-variable-pitch)=.
 - There is a toggle function for toggling between light and dark theme variants:
   =(bespoke/toggle-theme)=.
 - There is a useful footer line visual alert "bell" inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]]. To use
   include =(setq bespoke-set-visual-bell t)= in your setup of the theme.
-- All options are available via =customize-group=, and can also be found in the =bespoke-themes.el= file.
+- All options are available via =customize-group=, and can also be found in the
+  =bespoke-themes.el= file.
 
   
 *NOTE*: It is early days for this theme, so there may be fairly significant changes
