--- a/README.org
+++ b/README.org
@@ -11,8 +11,12 @@ conditions on fonts and ui elements, but bespoke-themes otherwise shares many of
 colors and themeing ideas with the good work done by Rougier (see also his work on [[https://arxiv.org/abs/2008.06030][on
 the design of text editors]]). 
 
-Faces are fairly (though note totally!) comprehensive, including (optional) evil
-cursor colors. I'm trying to add faces on a regular basis.
+Faces are fairly (though not totally!) comprehensive, including (optional) evil
+cursor colors. I'm trying to add faces on a regular basis. 
+
+*NOTE*: It is early days for this theme, so there may be fairly significant changes
+made in various commits. Suggestions and pull requests are welcome!
+
 
 *** Options
 
@@ -28,9 +32,6 @@ cursor colors. I'm trying to add faces on a regular basis.
 - All options are available via =customize-group=, and can also be found in the
   =bespoke-themes.el= file.
 
-  
-*NOTE*: It is early days for this theme, so there may be fairly significant changes
-made in various commits. Suggestions and pull requests are welcome!
 
 *** Settings
 Here's one possible way of setting up the theme. Note that since this theme is
