Add modeline height setting
- setting to control box padding of mode line

--- a/README.org
+++ b/README.org
@@ -24,6 +24,7 @@ made in various commits. Suggestions and pull requests are welcome!
 - There is an optional custom mode line, which may be set as a header line (as in
   nano-emacs), or as the normal footer line, or the theme can make merely cosmetic
   changes. See the options for the =(bespoke-set-mode-line)= variable.
+- You can set the height of the mode line with (bespoke-set-modeline-height)
 - You can set italics for keywords or for comments (or both).
 - You can set variable-pitch for headlines using =(bespoke-set-variable-pitch)=.
 - There is a toggle function for toggling between light and dark theme variants:
@@ -45,6 +46,8 @@ packages, but you can of course install it from this repo however you wish.
   :config
   ;; Set header line
   (setq bespoke-set-mode-line 'header)
+    ;; Set mode line height
+  (setq bespoke-set-modeline-height 3)
   ;; Set evil cursor colors
   (setq bespoke-set-evil-cursors t)
   ;; Use mode line visual bell
