--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-Custom medium contrast light and dark themes for Emacs (intended for GUI only, though
+Custom medium contrast light and dark themes for Emacs (intended for GUI, though
 basic support in terminal has been added). This started as a fork of [[https://github.com/rougier][Nicolas
 Rougier's]] work on [[https://github.com/rougier/elegant-emacs][elegant-emacs]] and [[https://github.com/rougier/nano-emacs][nano-emacs]], but has evolved with some ideas and
 colors borrowed from [[https://material.io/design/color/the-color-system.html#color-theme-creation][material colors]], [[https://github.com/bbatsov/solarized-emacs][solarized]] and [[https://github.com/arcticicestudio/nord-emacs][nord]], as well as color design
@@ -9,14 +9,16 @@ distro into standard theme formatting, so that it can be set just like any other
 theme. The theme is notably less conservative/minimal than nano-emacs (or elegant
 emacs), in the sense that it has a broader color palette and sets fewer configuration
 conditions on fonts and ui elements, but bespoke-themes otherwise shares many of its
-colors and themeing ideas with the good work done by Rougier (see also his work on [[https://arxiv.org/abs/2008.06030][on
-the design of text editors]]). 
+themeing ideas with the good work done by Rougier (see also his work on [[https://arxiv.org/abs/2008.06030][on the design
+of text editors]]).
 
 Faces are fairly (though not totally!) comprehensive, including (optional) evil
-cursor colors. I'm trying to add faces on a regular basis. 
+cursor colors. I'm trying to add faces on a regular basis. If there is a face you'd
+like to see added please open an issue. 
 
 *NOTE*: It is early days for this theme, so there may be fairly significant changes
-made in various commits. Suggestions and pull requests are welcome!
+made in various commits. I'm continuing to tweak colors slightly to find the best
+balance between aesthetics and readability. Suggestions and pull requests are welcome!
 
 
 *** Options
